--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI-CD Pipeline for Event-Management
+name: CI-CD Pipeline for MERN App
 
 on:
   push:
@@ -23,19 +23,32 @@ jobs:
 
     - name: Install frontend dependencies
       run: |
-        cd client
+        cd client1
         npm install
 
-    - name: Run tests
-      run: npm test
+    # - name: Run tests
+    #   run: npm test
 
     - name: Build frontend
       run: |
-        cd client
+        cd client1
         npm run build
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: build
-        path: ./client/build
+        path: ./client1/build
+
+    - name: Deploy to local server
+      uses: appleboy/ssh-action@v0.1.2
+      with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd C:\Users\yashd\Desktop\5th sem\DevOps\mern-app
+            git pull origin main
+            npm install
+            npm run build --prefix client1
+            pm2 restart all
