--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,49 +6,49 @@ on:
       - main
 
 jobs:
+  # Build Job
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
 
-    - name: Install backend dependencies
-      run: npm install
+      - name: Install Dependencies
+        run: |
+          cd todo
+          npm install
 
-    - name: Install frontend dependencies
-      run: |
-        cd client1
-        npm install
+      - name: Build Project
+        run: |
+          cd todo
+          npm run build
 
-    # - name: Run tests
-    #   run: npm test
+      - name: Upload artifact to enable deployment
+        uses: actions/upload-artifact@v3
+        with:
+          name: poduction file
+          path: ./todo/build
 
-    - name: Build frontend
-      run: |
-        cd client1
-        npm run build
+  # Deploy Job
+  deploy:
+   
+    needs: build
+    
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: poduction file
+          path: ./todo/build
 
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build
-        path: ./client1/build
-
-    - name: Deploy to local server
-      uses: appleboy/ssh-action@v0.1.2
-      with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd C:\Users\yashd\Desktop\5th sem\DevOps\mern-app
-            git pull origin main
-            npm install
-            npm run build --prefix client1
-            pm2 restart all
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.KEY }} #this is the key of the access token
+          publish_dir: ./todo/build
