--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI-CD Pipeline for MERN App
+name: CI-CD Pipeline for Event-Management
 
 on:
   push:
@@ -8,47 +8,48 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+     - name: Checkout code
+       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'
+     - name: Set up Node.js
+       uses: actions/setup-node@v2
+       with:
+         node-version: '14'
 
-    - name: Install backend dependencies
+      - name: Install backend dependencies
       run: npm install
 
-    - name: Install frontend dependencies
-      run: |
-        cd client1
-        npm install
+      - name: Install frontend dependencies
+        run: |
+          cd client
+          npm install
 
-    # - name: Run tests
-    #   run: npm test
+      - name: Run tests
+        run: npm test
 
-    - name: Build frontend
-      run: |
-        cd client1
-        npm run build
+      - name: Build frontend
+        run: |
+          cd client
+          npm run build
 
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build
-        path: ./client1/build
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: ./client/build
 
-    - name: Deploy to local server
-      uses: appleboy/ssh-action@v0.1.2
-      with:
+      - name: Deploy to local server
+        uses: appleboy/ssh-action@v0.1.2
+        with:
           host: ${{ secrets.SERVER_IP }}
-          username: ubuntu
+          username: your-server-username
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd C:\Users\yashd\Desktop\5th sem\DevOps\mern-app
+            cd /path/to/your/app
             git pull origin main
             npm install
-            npm run build --prefix client1
+            npm run build --prefix client
             pm2 restart all
+    
+    
