--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI-CD Pipeline for MERN App
+name: CI-CD Pipeline for Event-Management
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install frontend dependencies
       run: |
-        cd client
+        cd frontend
         npm install
 
     - name: Run tests
@@ -31,11 +31,11 @@ jobs:
 
     - name: Build frontend
       run: |
-        cd client
+        cd frontend
         npm run build
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
         name: build
-        path: ./client/build
+        path: ./frontend/build
